--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           class="w-18 h-18 rounded-full mt-6 md:w-48 md:h-auto mx-auto mb-4"
           src="https://avatars.githubusercontent.com/u/116043253?s=400&u=3ea514d4bb1122dbdec37ce7d2a4ae3c124dfb5f&v=4"
           alt="Agustina Aguilar"
-          width="384"
-          height="512"
+          width="342"
+          height="506"
         />
 
         <div class="space-y-4">
@@ -88,7 +88,7 @@
               </div>
 
               <a
-                href="https://drive.google.com/file/d/1-j5E7DyK3anbqTFZu86wzwEww3Q5Xf7-/view?usp=sharing"
+                href="https://drive.google.com/file/d/1RuRUWnQRcVyU8vfaG964y8hl9v8NCrc2/viewg"
                 class="p-6 bg-white w-auto h-6 hover:bg-gray-100 hover:text-blue-500 bg-opacity-75 border my-5 flex items-center mt-5 rounded-lg shadow-md"
               >
                 Resume
