--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </div>
 
               <a
-                href="https://drive.google.com/file/d/1RuRUWnQRcVyU8vfaG964y8hl9v8NCrc2/view"
+                href="file:///C:/Users/User/Downloads/Agustina%20Aguilar%20CV.pdf"
                 class="p-6 bg-white w-auto h-6 hover:bg-gray-100 hover:text-blue-500 bg-opacity-75 border my-5 flex items-center mt-5 rounded-lg shadow-md"
               >
                 Resume
